# ClanPlugin

./: .gitmodules  CMakeLists.txt  Changelog.txt  ClanOptions.hpp  ClanPlugin.cpp  ClangPetInterface.cpp  ClangPetInterface.hpp  MemoryAccess.cpp  MemoryAccess.hpp  PetPlutoInterface.cpp  PetPlutoInterface.hpp  README.txt  Scop.cpp  Scop.hpp  ScopStmt.cpp  ScopStmt.hpp  dependency_analysis.cpp  dependency_analysis.h  error_reporting.hpp  pluto_compat.cpp  pluto_compat.h  stdlib_matchers.cpp  stdlib_matchers.hpp
lib/cmake/optimizer_plugin/: optimizer_plugin-config.cmake
